fix for font weight issues and alignment of action buttons icons

--- a/client/app/form.less
+++ b/client/app/form.less
@@ -94,7 +94,7 @@ h1 {
   md-icon {
     width: 40px;
     height: 40px;
-    padding-right: 2px;
+    text-align: center;
     color: darken(@grey-fade, 20%) !important;
   }
 }
@@ -109,6 +109,8 @@ h1 {
     height: 40px;
     padding-top: 5px;
     padding-bottom: 3px;
+    padding-left: 2px;
+    text-align: center;
     color: darken(@grey-fade, 20%) !important;
   }
 }
